syntax = "proto3";

package leasemanager;

service LeaseManagerService {
  // Request leases for a set of DadInts.
  rpc RequestLeases(LeaseRequest) returns (LeaseResponse);

  // Release leases, including conflicting ones.
  rpc ReleaseLeases(LeaseReleaseRequest) returns (LeaseReleaseResponse);
}

message LeaseRequest {
  repeated string requested_dadints = 1;
}

message LeaseResponse {
  repeated Lease lease = 1;
  // Add any additional fields as needed.
}

message LeaseReleaseRequest {
  repeated Lease lease_to_release = 1;
}

message LeaseReleaseResponse {
  // Add any response fields as needed.
}

message Lease {
  string transaction_manager_id = 1;
  repeated string dadints = 2;
}
