syntax = "proto3";

package Dadtkv;

import "google/protobuf/empty.proto";
import "protos/LeaseManager.proto";
import "protos/DadInt.proto";

service TransactionManagerService {
  rpc ExecuteTransaction(TransactionRequest) returns (TransactionResponse);
  rpc BroadcastDadInts(BroadcastDadIntsMsg) returns (BroadcastDadIntsAck);
  
  // Paxos Learner
  rpc ReceiveAccepted(PaxosAccept) returns (google.protobuf.Empty);
}

message TransactionRequest {
  string client_id = 1;
  repeated string read_dadints = 2;
  repeated DadInt write_dadints = 3;
}

message TransactionResponse {
  repeated DadInt read_values = 1;
}

message BroadcastDadIntsMsg {
  repeated DadInt dadints = 1;
}

message BroadcastDadIntsAck {
  bool ok = 1;
}